<resources>
    <string name="app_name">UnLuacTool</string>
    <string name="menu_navigation_default_home">Project </string>
    <string name="menu_navigation_default_settings">Settings</string>
    <string name="menu_navigation_default_about">About</string>
    <string name="home_navigation_head_user_name">dingyi</string>
    <string name="home_navigation_head_user_hitokoto">loading....</string>
    <string name="app_version">1.0 (1)</string>
    <string name="main_project_import_fail">You want to import the file is not a lua or zip (apk) file</string>
    <string name="main_project_import_file_fail">No files found that match the lua standard bytecode (5.1–5.4)</string>
    <string name="main_project_import_some_file_fail">One or more lua files are not standard lua bytecode (5.1–5.4) file</string>
    <string name="main_project_lua_file_count">%1$s lua files</string>
    <string name="editor_project_indexer_tips">Opening project %1$s (%2$s/%3$s)</string>
    <string name="editor_main_viewer_tab_browse">Browse</string>
    <string name="editor_main_viewer_tab_recent">Recent</string>
    <string name="editor_main_viewer_tab_search">Search</string>
    <string name="editor_project_export_success">Export project successfully</string>
    <string name="editor_project_export_fail">Export project failed</string>
    <string name="editor_menu_export_project">Compile and Export</string>
    <string name="editor_menu_backup_project">Backup</string>
    <string name="editor_menu_save">Save</string>
    <string name="editor_menu_exit">Exit</string>
    <string name="editor_menu_code_undo">Undo</string>
    <string name="editor_menu_code_redo">Redo</string>
    <string name="editor_menu_code_search">Search</string>
    <string name="editor_menu_code_as_lua">Lasm to Lua</string>
    <string name="editor_menu_code_explore">Explore</string>
    <string name="editor_toolbar_title">Lua Bytecode Editor</string>
    <string name="editor_toolbar_title_loading">Loading…</string>
    <string name="main_temporary_project_name">Temporary Project</string>
    <string name="editor_save_successful">Save Successful</string>
    <string name="editor_project_indexer_toast">Lua compiled file is opening %1$s (%2$s/%3$s)</string>
    <string name="editor_menu_code_goto">Jump to Line</string>
    <string name="editor_menu_wordwrap">Word wrap</string>
    <string name="editor_menu_code_reload">Reload</string>
    <string name="editor_menu_readonly">Read-only mode</string>
    <string name="editor_edit_dialog_goto_hint">%1$d to %2$d</string>
    <string name="editor_edit_dialog_goto_error">Value is out of range.</string>
    <string name="editor_edit_cursor_position_format">(row %1$d, column %2$d) offset: %3$d</string>
    <string name="editor_edit_cursor_position_select_format">(row %1$d, column %2$d) offset: %3$d (%4$d chars)</string>
    <string name="editor_edit_cursor_position_search_format_empty">(row %1$d, column %2$d) offset: %3$d (no match)</string>
    <string name="editor_edit_cursor_position_search_format_default">(row %1$d, column %2$d) offset: %3$d (%4$d/%5$d matches)</string>
    <string name="editor_edit_cursor_position_search_format_single">(row %1$d, column %2$d) offset: %3$d (1 match)</string>
    <string name="editor_menu_smooth_mode">Smooth mode</string>
    <string name="editor_menu_code_completion">Instruction completion</string>
    <string name="editor_menu_edit_fragment_close">Close</string>
    <string name="editor_menu_code_export">Export</string>
    <string name="editor_menu_add">Add</string>
    <string name="editor_menu_delete">Delete</string>
    <string name="editor_menu_rename">Rename</string>
    <string name="editor_menu_open">Open</string>
</resources>