<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/editor_menu_code_explore"
        android:iconTint="?colorOnSurface"
        android:title="@string/editor_menu_code_explore"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_round_explore_24" />

    <item
        android:id="@+id/editor_menu_code_reload"
        android:title="@string/editor_menu_code_reload" />

    <item
        android:id="@+id/editor_menu_code_search"
        android:title="@string/editor_menu_code_search" />

    <item
        android:id="@+id/editor_menu_code_goto"
        android:title="@string/editor_menu_code_goto" />

    <item
        android:id="@+id/editor_menu_wordwrap"
        android:checkable="true"
        android:checked="false"
        android:title="@string/editor_menu_wordwrap" />



    <item
        android:id="@+id/editor_menu_code_export"
        android:title="@string/editor_menu_code_export" />

    <item
        android:id="@+id/editor_menu_edit_fragment_close"
        android:title="@string/editor_menu_edit_fragment_close" />
</menu>